--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   gh-release:
+    name: Create GitHub release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
