--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node src/dash-licenses-wrapper.js",
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "publish:ci": "yarn publish --non-interactive --access public --registry https://registry.npmjs.org/"
   },
   "files": [
     "src/*",
